# gngram-lookup

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: build.md  dev.md  docs.md  git.md  pypi.md  talk.md
.claude/commands/context/: project.md
builder/: build_hash_files.py  build_unigrams.py  package_release.py  report_stats.py
docs/: api.md  band-analysis.md  cli.md  data-format.md  development.md  use-cases.md  wordlist.md
gngram_counter/: __init__.py  cli.py  data.py  download_data.py  lookup.py  normalize.py
gngram_lookup/: __init__.py  cli.py  data.py  download_data.py  download_pos_data.py  find_inflections.py  find_suffixes.py  lookup.py  morphology.py  normalize.py  pos.py
scripts/: cluster.py  erosion.py  suffix_analysis.py  suffix_collocations.py  suffix_fingerprint.py  suffix_query.py
tests/: conftest.py  test_batch_frequency.py  test_contraction_fallback.py  test_data.py  test_erosion_cluster.py  test_erosion_tree.py  test_exists.py  test_frequency.py  test_frequency_caching.py  test_frequency_data_installation.py  test_frequency_edge_cases.py  test_get_data_dir.py  test_get_hash_file.py  test_has_pos.py  test_hash_word.py  test_hyphenated_fallback.py  test_is_data_installed.py  test_lookup.py  test_normalize.py  test_pos.py  test_pos_data_installation.py  test_pos_freq.py  test_pos_tag.py  test_possessive_fallback.py  test_prefix_cluster.py  test_split_contraction.py  test_split_hyphenated.py  test_suffix_fingerprint_helpers.py  test_suffix_query_helpers.py  test_word_score.py  test_wordlist.py
